--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -20,11 +20,10 @@
         <section class="footer__sections--shop">
             <a target="__blank" class="title3" href="https://adalab.es/">Contacto</a>
             <span class="footer__aboutus-li">
-
                 <nav class="icons__social-icon">
                     <nav class="mail">
                         <a target="__blank" href="mailto:lorenaggs2812@gmail.com"><i
-                            class="fa-solid fa-envelope"></i></a>
+                                class="fa-solid fa-envelope"></i></a>
                     </nav>
                     <nav class="linkedin">
                         <a target="__blank" href="https://www.linkedin.com/in/lorena-guartazaca-b55a541b4/"><i
@@ -34,11 +33,14 @@
                         <a target="__blank" href="https://github.com/lorenaggs"><i class="fa-brands fa-github"></i></a>
                     </nav>
                     <nav class="twitter">
-                        <a target="__blank" href="https://twitter.com/lorenaggs12?s=11"><i class="fa-brands fa-twitter"></i></a>
+                        <a target="__blank" href="https://twitter.com/lorenaggs12?s=11"><i
+                                class="fa-brands fa-twitter"></i></a>
                     </nav>
                 </nav>
             </span>
+            <section class="">Lorena Guartazaca</section>
         </section>
+   
     </section>
     <nav class="footer__uparrow">
         <a href="#"><img src="assets/images/uparrow.png" alt="image uparrow"></a>
